@@ -20,16 +20,18 @@ public class NonWeaponSuffixes implements ISlashRegistryInit {
             .add(Elements.Water, "Of the Yeti")
             .add(Elements.Thunder, "Of the Valkyrie")
             .add(Elements.Nature, "Of the Snake")
-            .tier(1, x -> Arrays.asList(new StatModifier(30, 35, new ElementalResist(x), ModType.FLAT)))
-            .tier(2, x -> Arrays.asList(new StatModifier(25, 30, new ElementalResist(x), ModType.FLAT)))
-            .tier(3, x -> Arrays.asList(new StatModifier(15, 25, new ElementalResist(x), ModType.FLAT)))
+            .tier(1, x -> Arrays.asList(new StatModifier(25, 30, new ElementalResist(x), ModType.FLAT)))
+            .tier(2, x -> Arrays.asList(new StatModifier(20, 25, new ElementalResist(x), ModType.FLAT)))
+            .tier(3, x -> Arrays.asList(new StatModifier(15, 20, new ElementalResist(x), ModType.FLAT)))
             .tier(4, x -> Arrays.asList(new StatModifier(13, 15, new ElementalResist(x), ModType.FLAT)))
             .tier(5, x -> Arrays.asList(new StatModifier(8, 13, new ElementalResist(x), ModType.FLAT)))
             .includesTags(SlotTag.jewelry_family, SlotTag.armor_family, SlotTag.offhand_family)
             .Weight(4000)
             .Suffix()
             .Build();
+
     }
+
 }
 
 
